--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "weather",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://prasanthsankar32.github.io/weatherapp/",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-responsive": "^8.0.1",
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
